# notion-graph-view

./: credentials.py  pyproject.toml  setup.cfg
notion_graph_view/: generate_view.py  parser.py
tests/: test_notion_graph_view.py
