[tool.poetry]
name = "notion-graph-view"
version = "0.1.0"
description = "Generate a roam research like network graph view from your Notion pages."
authors = ["Steve Sun"]

[tool.poetry.dependencies]
python = "^3.9"
notion-client = "^1.0.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
