[metadata]
name = notion-graph-view
version = 0.1.0
author = Steve Sun
author_email = sund.chn@gmail.com
description = Generate a roam research like network graph view from your Notion pages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stevedsun/notion-graph-view
project_urls =
    Bug Tracker = https://github.com/stevedsun/notion-graph-view/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = notion_graph_view
packages = find:
python_requires = >=3.7

[options.packages.find]
where = notion_graph_view